istio-and-k8s/bonus-booklet-without-opa.yaml
##################################################################################################
# bonus-booklet-service
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: bonus-booklet-service
  labels:
    app: bonus-booklet-service
    service: bonus-booklet-service
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: bonus-booklet-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bonus-booklet-service
spec:
  selector:
    matchLabels:
      app: bonus-booklet-service
  replicas: 1
  template:
    metadata:
      labels:
        app: bonus-booklet-service
    spec:
      serviceAccountName: bonus-booklet-service
      containers:
        - name: bonus-booklet-service
          image: tabeaschuster/bonus-booklet-service # -without-mongo-service
          #   docker build -f docker/bonus-booklet-service.Dockerfile -t tabeaschuster/bonus-booklet-without-mongo-service .
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
