istio-and-k8s/bonus-booklet-with-opa.yaml
##################################################################################################
# bonus-booklet-service
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: bonus-booklet-service
  labels:
    app: bonus-booklet-service
    service: bonus-booklet-service
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: bonus-booklet-service
---
# Define the service entry for the local OPA service on port 9191.
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: local-opa-grpc
spec:
  hosts:
    - "local-opa-grpc.local"
  endpoints:
    - address: "127.0.0.1"
  ports:
    - name: grpc
      number: 9191
      protocol: GRPC
  resolution: STATIC
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bonus-booklet-service
spec:
  selector:
    matchLabels:
      app: bonus-booklet-service
  replicas: 1
  template:
    metadata:
      labels:
        app: bonus-booklet-service
    spec:
      serviceAccountName: bonus-booklet-service
      containers:
        - name: bonus-booklet-service
          image: tabeaschuster/bonus-booklet-service # -without-mongo-service
          #   docker build -f docker/bonus-booklet-service.Dockerfile -t tabeaschuster/bonus-booklet-without-mongo-service .
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
        - name: opa
          image: openpolicyagent/opa:latest-envoy
          securityContext:
            runAsUser: 1111
          volumeMounts:
            - readOnly: true
              mountPath: /policy
              name: opa-policy
          args:
            - "run"
            - "--server"
            - "--addr=localhost:8181"
            - "--diagnostic-addr=0.0.0.0:8282"
            - "--set=plugins.envoy_ext_authz_grpc.addr=:9191"
            - "--set=plugins.envoy_ext_authz_grpc.query=data.envoy.authz.allow"
            - "--set=decision_logs.console=true"
            - "--ignore=.*"
            - "/policy" # main.rego"
          livenessProbe:
            httpGet:
              path: /health?plugins
              scheme: HTTP
              port: 8282
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health?plugins
              scheme: HTTP
              port: 8282
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: proxy-config
          configMap:
            name: proxy-config
        - name: opa-policy
          configMap:
            name: opa-policy
