istio-and-k8s/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 7777 # $EGRESS_GATEWAY_MONGODB_PORT
        name: mongo
        protocol: TCP
      hosts:
        - bonusbooklet-mongo.default.svc.cluster.local # my-mongo.tcp.svc
    - port:
        number: 7778 # $EGRESS_GATEWAY_MONGODB_PORT
        name: rabbitmq
        protocol: TCP
      hosts:
        - rabbitmq.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-mongo
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
    - name: mongo
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-rabbitmq
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
    - name: rabbitmq
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mongo
spec:
  host: bonusbooklet-mongo.default.svc.cluster.local # my-mongo.tcp.svc
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rabbitmq
spec:
  host: rabbitmq.default.svc.cluster.local # my-mongo.tcp.svc
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-mongo-through-egress-gateway
spec:
  hosts:
    - bonusbooklet-mongo.default.svc.cluster.local # my-mongo.tcp.svc
  gateways:
    - mesh
    - istio-egressgateway
  tcp:
    - match:
        - gateways:
            - mesh
          destinationSubnets:
            - 192.168.49.1 # 192.168.58.1/32 # 192.168.65.2/32 #$$MONGODB_IP/32
          port: 27017 # $MONGODB_PORT
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            subset: mongo
            port:
              number: 7777 #$EGRESS_GATEWAY_MONGODB_PORT
    - match:
        - gateways:
            - istio-egressgateway
          port: 7777 #$EGRESS_GATEWAY_MONGODB_PORT
      route:
        - destination:
            host: bonusbooklet-mongo.default.svc.cluster.local # my-mongo.tcp.svc
            port:
              number:  27017 #$$MONGODB_PORT
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-rabbitmq-through-egress-gateway
spec:
  hosts:
    - rabbitmq.default.svc.cluster.local # my-mongo.tcp.svc
  gateways:
    - mesh
    - istio-egressgateway
  tcp:
    - match:
        - gateways:
            - mesh
          destinationSubnets:
            - 192.168.49.1/32 #  192.168.49.1/32 # 192.168.58.1/32  # 192.168.58.1 # 192.168.65.2/32 #$$MONGODB_IP/32
          port: 5672 # port
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            subset: rabbitmq
            port:
              number: 7778 #$EGRESS_GATEWAY_MONGODB_PORT
    - match:
        - gateways:
            - istio-egressgateway
          port: 7778 #$EGRESS_GATEWAY_MONGODB_PORT
      route:
        - destination:
            host: rabbitmq.default.svc.cluster.local # my-mongo.tcp.svc
            port:
              number:  5672 #port
          weight: 100
